# fastapi-githubapp

./: .dockerignore  .env.example  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  releases.yaml
.github/prompts/: complete-implementation-overview.md
.github/prompts/implementation-phases/: README.md  compatibility-analysis.md  oauth2-integration.md  phase1-async-http.md  phase2-background-tasks.md  phase3-async-client.md  phase4-external-queues.md  phase5-oauth2.md  phase6-oidc.md  taskiq-compatibility.md
.github/workflows/: black.yaml  ci-python.yaml  codeql-analysis.yaml  publish-pypi.yaml  release-drafter.yaml
samples/: README.md
samples/01-basic-webhook/: .env.example  README.md  app.py
samples/02-configuration/: .env.example  README.md  app.py  constructor.py
samples/03-oauth2-integration/: .env.example  README.md  app.py  simple.py
samples/04-advanced-features/: .env.example  README.md  app.py  simple.py
samples/cruel_closer/: app.py
src/githubapp/: core.py
tests/: test_core.py  test_oauth.py  test_oauth_errors.py  test_rate_limiting.py
